[package]
name = "lazap"
version = "0.6.3"
description = "Lazap Launcher"
authors = ["Lazap-Development"]
license = ""
repository = "https://github.com/Lazap-Development/lazap"
default-run = "lazap"
edition = "2021"
rust-version = "1.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"
features = ["sqlite"]

[dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.4", features = ["devtools", "dialog-all", "global-shortcut-all", "http-request", "os-all", "path-all", "protocol-asset", "shell-execute", "shell-open", "system-tray", "updater", "window-center", "window-close", "window-create", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
window-shadows = "0.2.1"
html_parser = "0.6.3"
thiserror = "1.0.38"
whoami = "1.3.0"
sysinfo = "0.28.0"
sha2 = "0.10.6"
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.45", features = ["vendored"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
