[package]
name = "lazap"
version = "0.8.3"
description = "Lazap Launcher"
authors = ["Lazap-Development"]
license = "CC BY-NC-SA 4.0"
repository = "https://github.com/Lazap-Development/lazap"
default-run = "lazap"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.7.1", features = [
    "macos-private-api",
    "window-create",
    "window-center",
    "window-unminimize",
    "window-close",
    "window-hide",
    "window-unmaximize",
    "window-minimize",
    "window-start-dragging",
    "window-show",
    "window-maximize",
    "dialog-all",
    "global-shortcut-all",
    "os-all",
    "path-all",
    "protocol-asset",
    "shell-execute",
    "shell-open",
    "system-tray",
    "updater",
] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
thiserror = "1.0.38"
whoami = "1.5.0"
sysinfo = "0.28.4"
sha2 = "0.10.6"
rand = "0.8"
base64 = "0.22.0"
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }
reqwest = { version = "0.11" }
actix-web = { version = "4.3.1" }
rdev = "0.5.3"
keyvalues-serde = "0.2.1"
scraper = "0.19.0"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
urlencoding = "2.1.3"
lazy_static = "1.5.0"
tokio = "1.39.2"

[target.'cfg(target_os = "windows")'.dependencies]
serde_json = "1.0.114"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio-rusqlite = "0.5.1"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
window-vibrancy = "0.4.3"
window-shadows = "0.2.2"

[target.'cfg(target_os = "linux")'.dependencies]
rusqlite = "0.31.0"
tokio-rusqlite = "0.5.1"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
